Issue #2262715 by lolandese: Limit image width to that of the region. If you now set the size of images in a block one size bigger than the block itself, it will use the full block width without leaving adjacent whitespace.

--- a/flickr.css
+++ b/flickr.css
@@ -96,3 +96,7 @@ span.floatright {
 span.flickr-tags {
   font-style: italic;
 }
+
+.flickr-wrap, .flickr-wrap img, .flickr-wrap .flickr-credit {
+  max-width: 100%;
+}
